# aoc_2024_rust

./: Cargo.toml  justfile
src/: day1.rs  day2.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  lib.rs
src/snapshots/: aoc_rust_2024__day2__tests__parsing.snap  aoc_rust_2024__day3__tests__parsing.snap  aoc_rust_2024__day3__tests__parsing2.snap  aoc_rust_2024__day4__tests__parsing.snap  aoc_rust_2024__day5__tests__parsing.snap  aoc_rust_2024__day6__tests__parsing.snap  aoc_rust_2024__day7__tests__parsing.snap  aoc_rust_2024__day8__tests__parsing.snap
src/utils/: mod.rs  point.rs
src/utils/snapshots/: aoc_rust_2024__utils__point__tests__neighborhoods-2.snap  aoc_rust_2024__utils__point__tests__neighborhoods.snap
